--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">zChat</string>
     <string name="sign_out" />
     <string name="input">Input</string>
+    <string name="sign_in">Sign In</string>
 </resources>
