--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">zChat</string>
     <string name="sign_out" />
     <string name="input">Input</string>
-    <string name="sign_in">Sign In</string>
+    <string name="sign_in">Welcome to zChat!</string>
+    <string name="usr_email">Email</string>
+    <string name="usr_password">Password</string>
+    <string name="normal_login">Normal Login</string>
+    <string name="create_user">Create User</string>
+    <string name="status"></string>
+
 </resources>
